Novo texto na página inicial

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<title>EST - Experiências de Estabilidade</title>
 </head>
 <body>
-<h1>Complete o texto: Experiências de Estabilidade</h1>
-
+<h1>Experiências de Estabilidade</h1>
+<h3>Exercício de preencher lacunas. Escolha seu Comandante:</h3>
 <ul>
 <li><a href="caminha.html">Comandante Caminha</a></li>
 <li><a href="steinberger.html">Comandante Steinberger</a></li>
