--- a/sidnei.html
+++ b/sidnei.html
@@ -20,15 +20,15 @@
 
 <li>Dispor de um peso móvel, que em navios médios e grandes se movimenta numa carreta sobre trilhos pra ambos os bordos, e que proporcione um ângulo de banda de cerca de um grau para cada bordo em navios grandes, de um e meio grau para navios médios e de dois graus a três graus para pequenas embarcações</li>
 
-<li>Mede-se por meio de pêndulosde grande comprimento amotecidos numa cuba com óleo e que se deslocam sobre uma régua graduada, o valor das distâncias percorridas pelos pêndulos a partir da linha central</li>
+<li>Mede-se, por meio de pêndulos de grande comprimento amortecidos numa cuba com óleo e que se deslocam sobre uma régua graduada, o valor das distâncias percorridas pelos pêndulos a partir da linha central</li>
 
-<li>Determina-se o calado médio real, após as letiraus dos calados AV e AR com as devidas correções e com este calado médio, obtém-se o valor de KM (cota do metacentro), e do volume de carena no plano de curvas hidrostáticas do navio</li>
+<li>Determina-se o calado médio real, após as leituras dos calados AV e AR com as devidas correções; e com este calado médio, obtém-se o valor de KM (cota do metacentro), e do volume de carena no plano de curvas hidrostáticas do navio</li>
 
 <li>Obtém-se a densidade da água no local em que o navio encontra-se flutuando, e determina-se o deslocamento correto, multiplicando-se o valor do volume de carena pelo valor da densidade</li>
 
 <li>Com a fórmula p.d/Δ * CF/FL, obtém-se o valor de GM, por ocasião da experiência de estabilidade</li>
 
-<li>Somente deverão ficara bordo o pessoal indispensável à prova de Estabilidade</li>
+<li>Somente deverá ficar a bordo o pessoal indispensável à prova de Estabilidade</li>
 
 <li>Deverão ser computados todos os pesos em excesso a bordo, para as devidas correções necessárias</li>
 
