--- a/steinberger.html
+++ b/steinberger.html
@@ -16,19 +16,19 @@
 
 <div id="base" contenteditable>
 <ol>
-<li>O navio deverá estar flutuando em águas tanquilas, de preferência dentro do dique, sem qualquer amarração que o impeça de se inclinar livremente</li>
+<li>O navio deverá estar flutuando em águas tranquilas, de preferência dentro do dique, sem qualquer amarração que o impeça de se inclinar livremente</li>
 
 <li>Dispor de um peso móvel, conhecido, de modo que possa deslocar-se livremente, de um bordo ao outro</li>
 
-<li>Mede-se por meio de um pêndulo de grande comprimento que se desloca sobre uma régua gradauda, o valor da distância percorrida pelo pêndulo a partir da linha central</li>
+<li>Mede-se por meio de um pêndulo de grande comprimento, que se desloca sobre uma régua graduada, o valor da distância percorrida pelo pêndulo a partir da linha central</li>
 
 <li>Determina-se o calado médio, após a leitura dos calados AV e AR. Com este calado médio, obtém-se o valor de KM (cota do metacntro), no plano de curvas hidrostáticas</li>
 
-<li>Obtém-se a densidade daa água no local em que se encontra flutuando o navio, com o valor de ∇ = Lpp . B . Hmed . α, determina-se o valor correto de (Δ = ∇ . ∂) em toneladas métricas</li>
+<li>Obtém-se a densidade da água no local em que se encontra flutuando o navio, com o valor de ∇ = Lpp . B . Hmed . α, determina-se o valor correto de (Δ = ∇ . ∂) em toneladas métricas</li>
 
 <li>Com a fórmula p.d/Δ * CF/FL, obtém-se o valor de GM, por ocasião da experiência de estabilidade</li>
 
-<li>Somente deverão ficar a bordo o pessoal indispensável à prova de Estabilidade</li>
+<li>Somente deverá ficar a bordo o pessoal indispensável à prova de Estabilidade</li>
 
 <li>Deverão ser computados todos os pesos em excesso a bordo, para as devidas correções necessárias</li>
 
